# PLC_node

./: .env  .gitignore  main.py  pyproject.toml
config/: config.toml  plc_info.yaml
src/plc_node/: __init__.py  plc_node.py
test/: test_plc.py
